<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical">

<TextView
    android:id="@+id/login_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/titulo_login"
    android:textSize="40sp"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        android:orientation="vertical">
        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/dica_login"
            android:gravity="center"/>

        <EditText
            android:id="@+id/senhaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/dica_senha"
            android:inputType="textPassword"
            android:gravity="center"/>

        <Button
            android:onClick="fazerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@android:string/ok"/>

        <Button
            android:onClick="abrirCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/quero_me_cadastrar"
            android:background="@android:color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>